# cocos2d-x-external

src/: CMakeLists.txt  build_android.sh
src/curl/: CMakeLists.txt
src/curl/lib/: CMakeLists.txt
src/curl/tests/server/: CMakeLists.txt
src/luajit/: .gitignore  CMakeLists.txt  build_android.sh  build_android_linux.sh  build_empty.sh  build_ios.sh
src/luajit/src/: msvcbuild.bat
src/luajit/src/buildvm/: CMakeLists.txt
src/luajit/src/minilua/: CMakeLists.txt
src/websockets/: CMakeLists.txt
tests/game1/: .gitignore
